[gd_scene load_steps=4 format=3 uid="uid://v8tjnrpekw1m"]

[ext_resource type="Script" path="res://save_zone.gd" id="1_8ttvd"]
[ext_resource type="FontFile" uid="uid://ydgjgk7jtq5b" path="res://MinimalPixelFont.ttf" id="2_ee181"]

[sub_resource type="BoxShape3D" id="BoxShape3D_23new"]
size = Vector3(4.14594, 13, 2.85825)

[node name="save_zone" type="Node3D"]
script = ExtResource("1_8ttvd")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.97871, 0)
shape = SubResource("BoxShape3D_23new")

[node name="save_text" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.94152, 1.50531)
pixel_size = 0.01
modulate = Color(0, 0, 0, 1)
outline_modulate = Color(1, 1, 1, 1)
text = "Press E to save"
font = ExtResource("2_ee181")
font_size = 200

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
